--- a/GoIT/js/MVC/package.json
+++ b/GoIT/js/MVC/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mvc",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "js/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
